# py-hydrocapt

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/py-hydrocapt/: __init__.py  client.py  session.py
src/py_hydrocapt/: __init__.py  client.py  const.py  exceptions.py
